# cc-vibeguard

./: .gitignore  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs  security.rs  transcripts.rs
npm/cc-vibeguard/: package.json
npm/cc-vibeguard/ui-samples/: consulting.html  dark-saas.html  default.html  pagespeed.html  report.json
npm/security-darwin-arm64/: package.json
npm/security-darwin-x64/: package.json
npm/security-linux-arm64/: package.json
npm/security-linux-x64/: package.json
npm/vibenalytics-security/: package.json
ui/: security-metrics-dev-brand-sections.html
