[package]
name = "cc-vibeguard"
version = "0.1.0"
edition = "2021"
description = "Security audit & risk dashboard for Claude Code sessions"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
